--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     <div class="accordion" id="about">
                         <div class="accordion-item">
                             <h2 class="accordion-header" id="heading-1">
-                                <button class="accordion-button" type="button" data-bs-toggle="collapse" 
+                                <button class="accordion-button fw-bold" type="button" data-bs-toggle="collapse" 
                                 data-bs-target="#about-1" aria-expanded="true" aria-controls="about-1">Intro</button>
                             </h2>
                             <div id="about-1" class="accordion-collapse collapse show" 
@@ -98,8 +98,8 @@
 
                         <div class="accordion-item">
                             <h2 class="accordion-header" id="heading-2">
-                                <button class="accordion-button" type="button" data-bs-toggle="collapse" 
-                                data-bs-target="#about-2" aria-expanded="true" aria-controls="about-2">About my Self</button>
+                                <button class="accordion-button fw-bold" type="button" data-bs-toggle="collapse" 
+                                data-bs-target="#about-2" aria-expanded="true" aria-controls="about-2">About My Self</button>
                             </h2>
                             <div id="about-2" class="accordion-collapse collapse" 
                                 aria-labelledby="heading-2" data-bs-parent="#about">
@@ -113,8 +113,8 @@
 
                         <div class="accordion-item">
                             <h2 class="accordion-header" id="heading-3">
-                                <button class="accordion-button" type="button" data-bs-toggle="collapse" 
-                                data-bs-target="#about-3" aria-expanded="true" aria-controls="about-3">About my Hobbies</button>
+                                <button class="accordion-button fw-bold" type="button" data-bs-toggle="collapse" 
+                                data-bs-target="#about-3" aria-expanded="true" aria-controls="about-3">About My Hobbies</button>
                             </h2>
                             <div id="about-3" class="accordion-collapse collapse " 
                                 aria-labelledby="heading-3" data-bs-parent="#about">
@@ -124,7 +124,6 @@
                                 </div>
                             </div>
                         </div>
-                        <a href="image.html" class="btn btn-outline-secondary btn-lg my-4 mx-2 fs-6">Photos</a>
 
                     </div>
                 </div>
