--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!--Navbar-->
     <nav class="navbar navbar-expand-md navbar-light bg-light ">
         <div class="container-xxl">
-            <a href="#home" class="navbar-brand"><span class="fw-bolder fst-italic text-secondary px-5"><i class="bi bi-code-slash mx-3"></i>James A.</span></a>
+            <a href="index.html" class="navbar-brand"><span class="fw-bolder fst-italic text-secondary px-5"><i class="bi bi-code-slash mx-3"></i>James A.</span></a>
 
 <!--Navbar TOGGLE BUTTON-->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" 
@@ -142,9 +142,9 @@
             <div class="row my-5 align-items-center justify-content-center g-3">
                 <div class="col-8 col-lg-4 col-xl-3">
                     <div class="card">
-                        <img src="img/picture.jpg" class="card-img-top" alt="...">
+                        <img src="img/Home.png" class="card-img-top my-3" alt="...">
                         <div class="card-body text-center py-5">
-                          <h5 class="card-title text-dark fw-bold">Specialization/Recommendation System- UI Design</h5>
+                          <h5 class="card-title text-dark fw-bold fs-5">Specialization/Recommendation System- UI Design</h5>
                           <p class="card-text mx-5 text-muted d-none d-lg-block">for College of Computer Studies in LSPU-SPCC</p>
                           <a href="https://namra14.github.io/SpecializationRecommendationUI-Design/" class="btn btn-outline-secondary mt-3">Explore</a>
                         </div>
@@ -153,10 +153,10 @@
 
                 <div class="col-8 col-lg-4 col-xl-3">
                     <div class="card border-secondary border-2">
-                        <img src="img/picture.jpg" class="card-img-top" alt="...">
-                        <div class="card-body text-center py-5 my-3">
-                          <h5 class="card-title text-dark fw-bold">My Curriculum Viate</h5>
-                          <p class="card-text mx-5 text-muted d-none d-lg-block">Using HTM, CSS and BOOTSTRAP</p>
+                        <img src="img/cv.jpg" class="card-img-top my-3" alt="...">
+                        <div class="card-body text-center py-5 my-4">
+                          <h5 class="card-title text-dark fw-bold">My Curriculum Vitae</h5>
+                          <p class="card-text mx-5 text-muted d-none d-lg-block">Using HTML, CSS and BOOTSTRAP</p>
                           <a href="https://namra14.github.io/JamesAngeles-CV/" class="btn btn-outline-secondary mt-3">Explore</a>
                         </div>
                       </div>
@@ -164,7 +164,7 @@
 
                 <div class="col-8 col-lg-4 col-xl-3">
                     <div class="card">
-                        <img src="img/picture.jpg" class="card-img-top" alt="...">
+                        <img src="img/aw.png" class="card-img-top " alt="...">
                         <div class="card-body text-center py-5 my-3">
                           <h5 class="card-title text-dark fw-bold">Online Agriculture Insurance Registry System- UI Design</h5>
                           <a href="https://github.com/Namra14/UI-3k.git" class="btn btn-outline-secondary my-4">Explore</a>
@@ -174,7 +174,7 @@
 
                 <div class="col-8 col-lg-4 col-xl-3">
                     <div class="card border-secondary border-2">
-                        <img src="img/picture.jpg" class="card-img-top" alt="...">
+                        <img src="img/bike.jpg" class="card-img-top" alt="...">
                         <div class="card-body text-center py-5">
                           <h5 class="card-title text-dark fw-bold">Bike Online Shop</h5>
                           <p class="card-text mx-5 text-muted d-none d-lg-block">Choose what time of Bikes, Equipments and Gears you want!! </p>
@@ -306,7 +306,7 @@
     <!--Navbar-->
     <nav class="navbar navbar-expand-md navbar-light bg-light ">
         <div class="container-xxl">
-            <a href="#home" class="navbar-brand"><span class="fw-bolder fst-italic text-secondary px-5"><i class="bi bi-code-slash mx-3"></i>James A.</span></a>
+            <a href="index.html" class="navbar-brand"><span class="fw-bolder fst-italic text-secondary px-5"><i class="bi bi-code-slash mx-3"></i>James A.</span></a>
 
 <!--Navbar TOGGLE BUTTON-->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" 
